force-app/main/default/objects/NationalAccountsPricing__c/NationalAccountsPricing__c.object-meta.xml
<CustomObject>
    <description>Pricing for national accounts</description>
    <label>National Accounts Pricing</label>
    <nameField>
        <label>Short Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>National Accounts Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>