force-app/main/default/objects/NationalAccountsPricing__c/fields/AlternatePrice__c.field-meta.xml
<CustomField>
    <fullName>AlternatePrice__c</fullName>
    <label>AlternatePrice</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>