force-app/main/default/objects/NationalAccountsPricing__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <length>4</length>
    <type>Text</type>
</CustomField>