force-app/main/default/objects/NationalAccountsPricing__c/fields/Break1Quantity__c.field-meta.xml
<CustomField>
    <fullName>Break1Quantity__c</fullName>
    <label>Break1Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>