force-app/main/default/objects/NationalAccountsPricing__c/fields/Break2Price__c.field-meta.xml
<CustomField>
    <fullName>Break2Price__c</fullName>
    <label>Break2Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>