force-app/main/default/objects/NationalAccountsPricing__c/fields/Break2Quantity__c.field-meta.xml
<CustomField>
    <fullName>Break2Quantity__c</fullName>
    <label>Break2Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>