force-app/main/default/objects/NationalAccountsPricing__c/fields/Break3Price__c.field-meta.xml
<CustomField>
    <fullName>Break3Price__c</fullName>
    <label>Break3Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>