force-app/main/default/objects/NationalAccountsPricing__c/fields/Break3Quantity__c.field-meta.xml
<CustomField>
    <fullName>Break3Quantity__c</fullName>
    <label>Break3Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>