force-app/main/default/objects/NationalAccountsPricing__c/fields/ChainCode__c.field-meta.xml
<CustomField>
    <fullName>ChainCode__c</fullName>
    <label>ChainCode</label>
    <length>8</length>
    <type>Text</type>
</CustomField>