force-app/main/default/objects/NationalAccountsPricing__c/fields/CompositeKey__c.field-meta.xml
<CustomField>
    <fullName>CompositeKey__c</fullName>
    <label>CompositeKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>