force-app/main/default/objects/NationalAccountsPricing__c/fields/CostUpPercent__c.field-meta.xml
<CustomField>
    <fullName>CostUpPercent__c</fullName>
    <label>CostUpPercent</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>