force-app/main/default/objects/NationalAccountsPricing__c/fields/CustomerSKU__c.field-meta.xml
<CustomField>
    <fullName>CustomerSKU__c</fullName>
    <label>CustomerSKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>