force-app/main/default/objects/NationalAccountsPricing__c/fields/DateBegin__c.field-meta.xml
<CustomField>
    <fullName>DateBegin__c</fullName>
    <label>Effective Date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>