force-app/main/default/objects/NationalAccountsPricing__c/fields/DateEnd__c.field-meta.xml
<CustomField>
    <fullName>DateEnd__c</fullName>
    <label>DateEnd</label>
    <length>8</length>
    <type>Text</type>
</CustomField>