force-app/main/default/objects/NationalAccountsPricing__c/fields/ListDownPercent__c.field-meta.xml
<CustomField>
    <fullName>ListDownPercent__c</fullName>
    <label>ListDownPercent</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>