force-app/main/default/objects/NationalAccountsPricing__c/fields/NationalAccountGroupID__c.field-meta.xml
<CustomField>
    <fullName>NationalAccountGroupID__c</fullName>
    <externalId>true</externalId>
    <label>National Account Group ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>