force-app/main/default/objects/NationalAccountsPricing__c/fields/NationalAccountPricingId__c.field-meta.xml
<CustomField>
    <fullName>NationalAccountPricingId__c</fullName>
    <externalId>true</externalId>
    <label>NationalAccountPricingId</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>