force-app/main/default/objects/NationalAccountsPricing__c/fields/NationalAccountsPricingKey__c.field-meta.xml
<CustomField>
    <fullName>NationalAccountsPricingKey__c</fullName>
    <externalId>true</externalId>
    <label>NationalAccountsPricingKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>