force-app/main/default/objects/NationalAccountsPricing__c/fields/PriceUnit__c.field-meta.xml
<CustomField>
    <fullName>PriceUnit__c</fullName>
    <label>PriceUnit</label>
    <length>2</length>
    <type>Text</type>
</CustomField>