force-app/main/default/objects/NationalAccountsPricing__c/fields/PricingType__c.field-meta.xml
<CustomField>
    <fullName>PricingType__c</fullName>
    <label>PricingType</label>
    <length>1</length>
    <type>Text</type>
</CustomField>