force-app/main/default/objects/NationalAccountsPricing__c/fields/QtyBreakFlag__c.field-meta.xml
<CustomField>
    <fullName>QtyBreakFlag__c</fullName>
    <label>QtyBreakFlag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>