force-app/main/default/objects/NationalAccountsPricing__c/fields/QuantityBreak__c.field-meta.xml
<CustomField>
    <fullName>QuantityBreak__c</fullName>
    <label>QuantityBreak</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>