force-app/main/default/objects/NationalAccountsPricing__c/fields/QuantityBreakUnit__c.field-meta.xml
<CustomField>
    <fullName>QuantityBreakUnit__c</fullName>
    <label>QuantityBreakUnit</label>
    <length>2</length>
    <type>Text</type>
</CustomField>