force-app/main/default/objects/NationalAccountsPricing__c/fields/Set__c.field-meta.xml
<CustomField>
    <fullName>Set__c</fullName>
    <label>Set</label>
    <length>4</length>
    <type>Text</type>
</CustomField>