force-app/main/default/objects/NationalAccountsPricing__c/fields/Subset__c.field-meta.xml
<CustomField>
    <fullName>Subset__c</fullName>
    <label>Subset</label>
    <length>4</length>
    <type>Text</type>
</CustomField>