force-app/main/default/objects/NationalAccountsPricing__c/fields/SystemCode__c.field-meta.xml
<CustomField>
    <fullName>SystemCode__c</fullName>
    <formula>IF(LEFT(CompositeKey__c,2)=&apos;SW&apos;,&apos;03&apos;,LEFT(CompositeKey__c,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SystemCode</label>
    <type>Text</type>
</CustomField>