force-app/main/default/objects/NationalAccountsPricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Action__c</columns>
    <columns>Break1Price__c</columns>
    <columns>Break1Quantity__c</columns>
    <columns>NationalAccountGroupID__c</columns>
    <columns>SystemCode__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>